--- a/style.css
+++ b/style.css
@@ -1,11 +1,26 @@
+*{
+    margin: 0;
+    padding: 0;
+    font-family: 'Montserrat', sans-serif;
+}
+
 .menu-img{
     width: 180px;
     height: 180px;
     border-radius: 50%;
 }
 
+.menu_items h1{
+    font-size: 1.5rem;
+    font-weight: 800;
+}
+
+.nav_items a{
+    font-family: 'Paytone One', sans-serif;
+}
+
 .items{
-    height: 55vh;
+    height: 60vh;
 }
 
 .item1{
@@ -30,4 +45,29 @@
 
 .font{
     font-size: 60px;
+    font-family: 'Paytone One', sans-serif;
 }
+
+.heading_font{
+    font-size: 6rem;
+    font-family: 'Paytone One', sans-serif;
+}
+
+.top_heading{
+    font-family: 'Pacifico', cursive;
+    color: #F2C64D;
+    font-size: 1.3rem;
+}
+
+.b_heading{
+    font-size: 3rem;
+    font-weight: 800;
+    margin-top: 1.5rem;
+}
+
+/* 'Paytone One',
+sans-serif;
+font-family: 'Pacifico',
+cursive;
+font-family: 'Montserrat',
+sans-serif; */
